syntax = "proto3";

package kv.v1;

option go_package = "github.com/masegraye/connect-plugin-go/testdata/kv/gen;kvv1";

// KVService provides simple key-value storage.
service KVService {
  // Get retrieves a value by key.
  rpc Get(GetRequest) returns (GetResponse);

  // Put stores a key-value pair.
  rpc Put(PutRequest) returns (PutResponse);

  // Delete removes a key.
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  // Watch streams changes to keys with the given prefix.
  rpc Watch(WatchRequest) returns (stream WatchEvent);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
}

message PutRequest {
  string key = 1;
  bytes value = 2;
}

message PutResponse {}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool found = 2;
}

message WatchRequest {
  // Key prefix to watch. Empty watches all keys.
  string prefix = 1;
}

message WatchEvent {
  // Type of change (put or delete).
  EventType type = 1;

  // The key that changed.
  string key = 2;

  // The new value (only for PUT events).
  bytes value = 3;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_PUT = 1;
  EVENT_TYPE_DELETE = 2;
}
